Fix text overflow

--- a/app/assets/stylesheets/components/evaluations.css.scss
+++ b/app/assets/stylesheets/components/evaluations.css.scss
@@ -170,6 +170,7 @@ $user-column-width: 170px;
   .status-header {
     max-width: 100px;
     min-width: 100px;
+    overflow: hidden;
   }
 
   thead tr th:nth-child(2) {
